# scope

./: README.md
programs/scope/: Cargo.toml
programs/scope-types/: Cargo.toml
programs/scope-types/src/: lib.rs  program_id.rs
